--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "Sinval Gomes dos Santos",
   "version": "0.1.0",
   "private": true,
-  "homepage":"http://localhost:3000",
+  "homepage": "http://localhost:3000",
   "dependencies": {
     "@prisma/client": "4.2.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -12,6 +12,7 @@
     "@types/node": "^18.7.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
